--- a/sass/theme/dark.scss
+++ b/sass/theme/dark.scss
@@ -1,4 +1,4 @@
-$bg-0: #121212;
+$bg-0: #001a12;
 
 // Dark theme needs a bigger contrast compared to the white theme.
 $bg-1: lighten($bg-0, 5%);
@@ -19,8 +19,8 @@ $text-2: lighten($bg-0, 40%);
 
   --border-color: var(--bg-2);
 
-  --primary-color: #ef5350;
-  --hover-color: white;
+  --primary-color: #40ffc0;
+  --hover-color: black;
 
   .social > img, .search-button > img {
     filter: invert(1);
