--- a/sass/theme/light.scss
+++ b/sass/theme/light.scss
@@ -1,10 +1,10 @@
-$bg-0: #fff;
-$bg-1: darken($bg-0, 2%);
+$bg-0: #d9fff2;
+$bg-1: darken($bg-0, 4%);
 $bg-2: darken($bg-1, 8%);
 
 $text-0: darken($bg-0, 87%);
-$text-1: darken($bg-0, 60%);
-$text-2: darken($bg-0, 30%);
+$text-1: darken($bg-0, 76%);
+$text-2: darken($bg-0, 65%);
 
 :root.light {
   --text-0: #{$text-0};
@@ -17,6 +17,6 @@ $text-2: darken($bg-0, 30%);
 
   --border-color: var(--bg-2);
 
-  --primary-color: #ef5350;
-  --hover-color: white;
+  --primary-color: #33cc9a;
+  --hover-color: black;
 }
