--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -1,32 +1,32 @@
 @font-face {
-  font-family: "Jetbrains Mono";
+  font-family: "Cascadia Code";
   font-style: normal;
   font-weight: 400;
-  src: url("fonts/JetbrainsMono/JetBrainsMono-Regular.ttf"), local("ttf");
+  src: url("fonts/Cascadia-Code/CascadiaCode-Regular.ttf"), local("ttf");
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Jetbrains Mono";
+  font-family: "Cascadia Code";
   font-style: normal;
   font-weight: 700;
-  src: url("fonts/JetbrainsMono/JetBrainsMono-Bold.ttf"), local("ttf");
+  src: url("fonts/Cascadia-Code/CascadiaCode-Bold.ttf"), local("ttf");
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Space Grotesk";
+  font-family: "Oswald";
   font-style: normal;
   font-weight: 400;
-  src: url("fonts/SpaceGrotesk/SpaceGrotesk-Regular.ttf"), local("ttf");
+  src: url("fonts/Oswald/Oswald-Regular.ttf"), local("ttf");
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Space Grotesk";
+  font-family: "Oswald";
   font-style: normal;
   font-weight: 700;
-  src: url("fonts/SpaceGrotesk/SpaceGrotesk-Bold.ttf"), local("ttf");
+  src: url("fonts/Oswald/Oswald-Bold.ttf"), local("ttf");
   font-display: swap;
 }
 
@@ -34,25 +34,17 @@
 //
 
 @font-face {
-    font-family: "ZedTextFtl";
-    src: url(fonts/zed-fonts/ZedTextL-Regular.woff2) format("woff2");
+    font-family: "Archivo";
+    src: url(fonts/Archivo/Archivo-Regular.ttf), local("ttf");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: "ZedTextFtl";
-    src: url(fonts/zed-fonts/ZedTextL-Bold.woff2) format("woff2");
+    font-family: "Archivo";
+    src: url(fonts/Archivo/Archivo-Bold.ttf), local("ttf");
     font-weight: 700;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "ZedDisplayFtl";
-    src: url(fonts/zed-fonts/ZedDisplayL-Heavy.woff2) format("woff2");
-    font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
