--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,10 +18,10 @@
 
   /* Fonts */
   --font-size-base: 13.5px;
-  --mono-text-font: "Jetbrains Mono";
-  --text-font: "ZedTextFtl";
-  --header-font: "ZedDisplayFtl" "Space Grotesk", "Helvetica", sans-serif;
-  --code-font: "Jetbrains Mono";
+  --mono-text-font: "Cascadia Code";
+  --text-font: "Archivo";
+  --header-font: "Oswald", "Helvetica", sans-serif;
+  --code-font: "Cascadia Code";
 
   --line-height: 1.5;
   --page-width: 920px;
