--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -64,6 +64,7 @@ nav {
         flex-direction: row;
         flex-wrap: wrap;
         align-items: center;
+        font-family: var(--header-font);
 
         #dark-mode-toggle {
             margin-left: 0.5rem;
@@ -116,7 +117,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: monospace var(--header-font);
+  font-family: var(--text-font);
   font-size: 1.2rem;
   margin-top: 2em;
 }
