--- a/sass/parts/_toc.scss
+++ b/sass/parts/_toc.scss
@@ -5,7 +5,7 @@
 
     li,
     a {
-        font-family: sans-serif;
+        font-family: var(--header-font);
         color: var(--text-2);
         transition: none;
         border-bottom: none;
@@ -18,6 +18,7 @@
 
     .heading {
         font-weight: 700;
+        font-family: var(--text-font);
     }
 
     ul {
