--- a/sass/parts/_search.scss
+++ b/sass/parts/_search.scss
@@ -61,6 +61,7 @@ $icon-size: 1.3rem;
       flex: 1;
       padding: 0.75rem 2.5rem;
       font-size: 1rem;
+      font-family: var(--text-font);
       color: var(--text-0);
       background: var(--bg-1);
       border: 1px solid var(--bg-1);
@@ -151,9 +152,12 @@ $icon-size: 1.3rem;
     padding: 1rem;
 
     h1 {
-      margin-top: 0; // Override the default 2em margin
-      margin-bottom: 1rem;
+      // 0.5em margin to better position it within the box
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
+      margin-left: 0.5rem;
       font-size: 1.2rem;
+      font-family: var(--text-font);
 
       &::before {
         color: var(--primary-color);
