feat: add noml tag
Add NoML tag to declare that scraping for AI is not desired

--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="base" content="{{ config.base_url }}">
 
+    {# Add NoML tag #}
+    <meta name="robots" content="noml">
+
     {% if config.extra.fediverse %}
         <meta name="fediverse:creator"
               content="{{ config.extra.fediverse_creator }}">
