feat: og site_name tag
Add site_name OpenGraph tag

This is different to the OpenGraph title tag, which is used for pages

--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -25,6 +25,10 @@
                   {% endfor %} />
         {% endfor %}
     {% endif %}
+    
+    {# Add site_name tag #}
+    {# The below title tags are for pages instead #}
+    <meta name="og:site_name" content="{{ config.title }}">
 
     {# Site title #}
     {% set current_path = current_path | default(value="/") %}
