feat: theme toggle tags
Re-word alt tags and add hover title tags for theme toggle buttons

--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -77,8 +77,13 @@
                 <img src="{{ get_url(path="icons/sun.svg") }}"
                      id="sun-icon"
                      style="filter: invert(1)"
-                     alt="Light" />
-                <img src={{ get_url(path="icons/moon.svg") }} id="moon-icon" alt="Dark" />
+                     title="Switch to light theme"
+                     alt="Sun outline icon. Enables the light theme."/>
+                <img src={{ get_url(path="icons/moon.svg") }}
+                     id="moon-icon"
+                     alt="Dark"
+                     title="Switch to dark theme"
+                     alt="Moon outline icon. Enables the dark theme."/>
             </a>
 
             <!-- Initialize the theme toggle icons -->
