--- a/templates/macros/macros.html
+++ b/templates/macros/macros.html
@@ -2,27 +2,36 @@
     <li class="list-item">
         <section>
             <div class="post-header">
-                <time>{{ page.date | date(format="%Y-%m-%d") }}</time>
 
                 <div>
                     <h1 class="title">
                         <a href={{ page.permalink | safe }}>{{ page.title }}</a>
 
-                        {% if page.draft %}<span class="draft-label">DRAFT</span>{% endif %}
+                        {# Add updated label, rename draft label #}
+                        
+                        {% if page.updated %}
+                        	<span class="draft-label">Updated</span>
+                        {% endif %}
+                        
+                        {% if page.draft %}
+                        	<span class="draft-label">Draft</span>
+                	{% endif %}
                     </h1>
-
+                    
+                    {# Moved and reformatted post date #}
+            	    {{ page.date | date(format="%d %B %Y") }}
+                    
+                    {# Remove ellipsis from preview and remove read more #}
                     <div class="meta">
                         <div class="description">
                             {% if page.description %}
                                 {{ page.description }}
                             {% elif page.summary %}
-                                {{ page.summary | safe }}&hellip;
+                                {{ page.summary | safe }}
                             {% else %}
                                 {% set hide_read_more = true %}
                             {% endif %}
                         </div>
-
-                        {% if not hide_read_more %}<a class="readmore" href={{ page.permalink | safe }}>Read more ⟶</a>{% endif %}
                     </div>
                 </div>
             </div>
