feat: post license declaration
Add post info declaring how it is licensed.

Also allow linking to a page explaining what is covered under this license. This theme is MIT but the theme user might choose something else for their posts, and fonts will be licensed differently. This needs to be reflected.

--- a/templates/page.html
+++ b/templates/page.html
@@ -72,6 +72,17 @@
 		        {# Add link to post source #}
 	            	<br>
 	            	<a href="{{ config.extra.file_content_base_url }}{{ page.relative_path }}">View original file on {{ config.extra.git_platform }}</a>
+	            	
+	            	{# Add license declaration and link #}
+	            	<br>
+	            	{% if page.extra.license %}
+	            		Post content licensed under <a href = "{{ page.extra.license_url }}">{{ page.extra.license }}</a>
+	            	{% elif config.extra.content_license %}
+	            		Site content licensed under <a href = "{{ config.extra.content_license_url }}">{{ config.extra.content_license }}</a>
+	            	{% endif %}
+	            	{% if config.extra.license_explainer %}
+	            		(<a href = "{{ config.extra.license_explainer }}">see what's included</a>)
+	            	{% endif %}
 
                         {# Change the draft label #}
                         {% if page.draft %}<span class="draft-label">Draft</span>{% endif %}
