feat: latest posts
Add list of latest posts to the homepage by default

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,4 +13,9 @@
 
 {% block main_content %}
     {{ self::home_page(section=section) }}
+	<h1>Latest Posts</h1>
+    	<main class="post-list">
+		{% set section = get_section(path="posts/_index.md") %}
+		{{ post_macros::list_posts(pages=section.pages | slice(end=5)) }}
+    	</main>
 {% endblock main_content %}
