feat: meta text colour theming
Match the colour of meta text (post info and previews) to the theme.

Previously it hardcoded `#999` which is grey.

--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -102,7 +102,7 @@ nav {
 
 /* TODO: Is this still used? */
 .meta {
-  color: #999;
+  color: var(--text-meta);
   display: flexbox;
   /* This changes the meta class to use flexbox, which ensures inline display */
   align-items: center;
