--- a/sass/theme/light.scss
+++ b/sass/theme/light.scss
@@ -2,11 +2,13 @@ $bg-0: #d9fff2;
 $bg-1: darken($bg-0, 4%);
 $bg-2: darken($bg-1, 8%);
 
+$text-meta: darken($bg-0, 72%);
 $text-0: darken($bg-0, 87%);
 $text-1: darken($bg-0, 76%);
 $text-2: darken($bg-0, 65%);
 
 :root.light {
+  --text-meta: #{$text-meta};
   --text-0: #{$text-0};
   --text-1: #{$text-1};
   --text-2: #{$text-2};
