--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,16 +31,7 @@ html {
   color: var(--text-0);
   font-family: var(--text-font);
   line-height: var(--line-height);
-
-  @media (max-width: 992px) {
-    font-size: calc(var(--font-size-base) * 0.97);
-  }
-  @media (max-width: 768px) {
-      font-size: calc(var(--font-size-base) * 0.95);
-  }
-  @media (max-width: 576px) {
-      font-size: calc(var(--font-size-base) * 0.92);
-  }
+  font-size: 16;
 }
 
 body {
